fix: Improve Menu Accessibility on Small Screens #458

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -327,9 +327,6 @@
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
-  }
   .right-46 {
     right: calc(var(--spacing) * 46);
   }
@@ -446,6 +443,9 @@
   }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
+  }
+  .mt-auto {
+    margin-top: auto;
   }
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
